<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/register_appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/register_toolbar_background">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="10dp"
            app:titleTextColor="@color/register_toolbar_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_textfield_outline_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusedByDefault="false"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/register_appbarlayout"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/register_textinput_hint_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_textfield_name"
            android:focusedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_textfield_outline_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusedByDefault="false"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/register_textfield_outline_name"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/register_textinput_hint_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_textfield_email"
            android:focusedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_textfield_outline_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusedByDefault="false"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/register_textfield_outline_email"
        android:hint="@string/register_textinput_hint_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_textfield_password"
            android:focusedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/login_textfield_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_textfield_outline_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusedByDefault="false"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/register_textfield_outline_password"
        android:hint="@string/register_textinput_hint_confirm_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_textfield_confirm_password"
            android:focusedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/login_textfield_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:cornerRadius="5dp"
        android:text="@string/register_button_sumit_text"
        app:layout_constraintTop_toBottomOf="@+id/register_textfield_outline_confirm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
